feat(ai detection): add endpoint to ai detection
